# coyote_protector

./: README.md  detect_crystals.py  requirements.txt
scripts/: eval_accuracy.py  inference.py  prepare_dataset.py  training.py
yolov8_cpp/: CMakeLists.txt  README.md  main.cpp
yolov8_cpp/grayscale_labels/: c2w4_LaB6_20xmag.txt
